--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <select id="sourceSelect">
             <option value="bola1">Bola 1</option>
             <option value="ria">RIA</option>
+            <!-- NEW OPTION FOR CITRA -->
+            <option value="citra">Citra</option>
         </select>
         <button id="loadButton">Load Source</button>
     </div>
@@ -70,6 +72,12 @@
                 proxyPath: "/api/ria-proxy",
                 realSourceBase: "https://load.perfecttv.net/mpd/ria/",
                 manifestName: "manifest.mpd"
+            },
+            // NEW CONFIGURATION FOR CITRA
+            citra: {
+                proxyPath: "/api/citra-proxy",
+                realSourceBase: "https://get.perfecttv.net/citra/",
+                manifestName: "citra.mpd"
             }
         };
 
@@ -93,14 +101,12 @@
                     }
                 });
 
-                // Add event listeners
                 document.getElementById('loadButton').addEventListener('click', loadSource);
                 document.getElementById('sourceSelect').addEventListener('change', (e) => {
                     currentSource = e.target.value;
                     updateStatus(`Source changed to ${e.target.options[e.target.selectedIndex].text}`);
                 });
 
-                // Load the default source
                 loadSource();
             } else {
                 console.error('Browser not supported!');
@@ -112,13 +118,11 @@
             const source = sources[currentSource];
             updateStatus(`Loading ${currentSource}...`);
             
-            // Set up request filter for the current source
             player.getNetworkingEngine().clearAllRequestFilters();
             player.getNetworkingEngine().registerRequestFilter((type, request) => {
                 if (type === shaka.net.NetworkingEngine.RequestType.MANIFEST) {
                     request.uris = [source.proxyPath];
                 } else if (type === shaka.net.NetworkingEngine.RequestType.SEGMENT) {
-                    // This forces every segment request to go to the REAL server
                     let uri = request.uris[0];
                     if (uri.includes(window.location.hostname) || !uri.startsWith('http')) {
                         const fileName = uri.split('/').pop();
@@ -127,7 +131,6 @@
                 }
             });
 
-            // Load the manifest
             player.load(source.manifestName)
                 .then(() => {
                     console.log('Player loaded successfully');
